added working poc

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -95,5 +95,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
   <script src="//unpkg.com/@feathersjs/client@^3.0.0/dist/feathers.js"></script>
+  <script src="../feathersClient.js"></script>
   <script src="index.js"></script>
 </html>
