--- a/public/index.html
+++ b/public/index.html
@@ -35,19 +35,13 @@
     </style>
   </head>
   <body>
-    <header>
-        <h1>My Data Feelings <small><a href="/admin">⚙︎</a></small></h1>
-        <p>This is a series of daily visuals generated from my data feelings </p>
-        
-    </header>
-    <main class="grid-container" id="vis-grid">
-      <!-- all of our sketches will be added here -->
-    </main>
+    <div id="app"></div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
   <script src="//unpkg.com/@feathersjs/client@^3.0.0/dist/feathers.js"></script>
+  <script src="feathersClient.js"></script>
   <script src="index.js"></script>
 </html>
