--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,25 @@
         color:black;
         text-decoration: none;
       }
+
+
+      #myControls{
+        grid-row-start: 1;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        padding:1em;
+      } 
+
+      #submit-input{
+        width:100px;
+        height: 4em;
+        background-color:darkslateblue;
+        color:white;
+        border-radius: 4px;
+        border:none;
+        margin-top:2em;
+      }
       
     </style>
   </head>
@@ -43,5 +62,7 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
   <script src="//unpkg.com/@feathersjs/client@^3.0.0/dist/feathers.js"></script>
   <script src="feathersClient.js"></script>
+  <script src="views.js"></script>
+  <script src="MyFeelings.js"></script>
   <script src="index.js"></script>
 </html>
