--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,20 @@
         font-family: 'Monaco', Helvetica, sans-serif;
       }
 
+      input{
+        width:100%;
+        padding:10px;
+        max-width:800px;
+      }
+      input[type="radio"]{
+        width: auto;
+      }
+
+      fieldset{
+        border-radius:4px;
+        max-width:800px;
+      }
+
       .grid-container {
           display: grid;
           grid-column-gap: 10px;
@@ -49,6 +63,10 @@
         border-radius: 4px;
         border:none;
         margin-top:2em;
+      }
+
+      .btn{
+        cursor:pointer;
       }
       
     </style>
